# lastfm-global-trends

./: .gitignore  README.md  app.py  countries.py  fetch_countries.py  main.py  pyproject.toml
.github/workflows/: ci.yml
modules/: db.py  geo.py  home.py  utils.py
notebooks/: explore.ipynb
scripts/: download_data.py  last-fm-global-trends-nootebook.ipynb
tests/: test_countries.py  test_geo_module.py  test_home_module.py  test_utils.py
www/: styles.css
