[project]
name = "lastfm-global-trends"
version = "0.1.0"
description = "Shiny for Python dashboard exploring global music trends via the Last.fm API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=7.0.5",
    "itables>=2.7.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "pylast>=7.0.2",
    "shiny>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
